tests/Suite/resolver/error/multiple_type.nk
type Ata b b =
  { lel : b

  }